test/fails/bad_tags/compose1.lgl
tag a is vec2;

a x = [1., 1.];
a->vec2 a_v2 = [[1., 1.], [1., 1.]];
a->vec2 bad = a_v2 * a_v2; // No possible cast